[gd_scene load_steps=9 format=2]

[ext_resource path="res://scenes/ui_scenes/PlayerContainer.tscn" type="PackedScene" id=1]
[ext_resource path="res://scripts/menus/connect_menu.gd" type="Script" id=2]
[ext_resource path="res://scripts/menus/lobby_menu.gd" type="Script" id=3]
[ext_resource path="res://ui_theme/ui_theme_1.tres" type="Theme" id=4]
[ext_resource path="res://scripts/menus/menu_manager.gd" type="Script" id=5]
[ext_resource path="res://scenes/background/Background.tscn" type="PackedScene" id=6]
[ext_resource path="res://assets/fonts/Nunito-Bold.ttf" type="DynamicFontData" id=7]

[sub_resource type="DynamicFont" id=1]
size = 34
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
use_mipmaps = true
use_filter = true
font_data = ExtResource( 7 )

[node name="Menu" type="CanvasLayer"]
script = ExtResource( 5 )

[node name="Background" parent="." instance=ExtResource( 6 )]

[node name="ConnectMenu" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 0, 300 )
script = ExtResource( 2 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="ConnectMenu"]
margin_left = 362.0
margin_top = 177.0
margin_right = 662.0
margin_bottom = 422.0
rect_min_size = Vector2( 300, 0 )
custom_constants/separation = 20
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TitleLabel" type="Label" parent="ConnectMenu/VBoxContainer"]
margin_right = 300.0
margin_bottom = 47.0
theme = ExtResource( 4 )
custom_fonts/font = SubResource( 1 )
text = "Multiplayer Billiard"
align = 1

[node name="PlayerName" type="LineEdit" parent="ConnectMenu/VBoxContainer"]
margin_top = 67.0
margin_right = 300.0
margin_bottom = 113.0
theme = ExtResource( 4 )
max_length = 16
placeholder_text = "Enter name"
caret_blink = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HostButton" type="Button" parent="ConnectMenu/VBoxContainer"]
margin_top = 133.0
margin_right = 300.0
margin_bottom = 179.0
theme = ExtResource( 4 )
text = "Host"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="JoinButton" type="Button" parent="ConnectMenu/VBoxContainer"]
margin_top = 199.0
margin_right = 300.0
margin_bottom = 245.0
theme = ExtResource( 4 )
text = "Join"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LobbyMenu" type="MarginContainer" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -512.0
margin_top = -300.0
margin_right = 512.0
margin_bottom = 300.0
rect_pivot_offset = Vector2( 0, 300 )
theme = ExtResource( 4 )
custom_constants/margin_right = 60
custom_constants/margin_top = 60
custom_constants/margin_left = 60
custom_constants/margin_bottom = 60
script = ExtResource( 3 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="LobbyMenu"]
margin_left = 60.0
margin_top = 60.0
margin_right = 964.0
margin_bottom = 540.0
custom_constants/separation = 60
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TeamPanelContainer" type="HBoxContainer" parent="LobbyMenu/VBoxContainer"]
margin_right = 904.0
margin_bottom = 262.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 60
__meta__ = {
"_edit_use_anchors_": false
}

[node name="T1" type="VBoxContainer" parent="LobbyMenu/VBoxContainer/TeamPanelContainer"]
margin_right = 261.0
margin_bottom = 262.0
size_flags_horizontal = 3
__meta__ = {
"_edit_lock_": true
}

[node name="PlayerContainer" parent="LobbyMenu/VBoxContainer/TeamPanelContainer/T1" instance=ExtResource( 1 )]
margin_top = 0.0
margin_bottom = 206.0

[node name="JoinButton" type="Button" parent="LobbyMenu/VBoxContainer/TeamPanelContainer/T1"]
margin_top = 216.0
margin_right = 261.0
margin_bottom = 262.0
size_flags_stretch_ratio = 2.43
text = "Join Team 1"
__meta__ = {
"_edit_lock_": true
}

[node name="T0" type="VBoxContainer" parent="LobbyMenu/VBoxContainer/TeamPanelContainer"]
margin_left = 321.0
margin_right = 582.0
margin_bottom = 262.0
size_flags_horizontal = 3
__meta__ = {
"_edit_lock_": true
}

[node name="PlayerContainer" parent="LobbyMenu/VBoxContainer/TeamPanelContainer/T0" instance=ExtResource( 1 )]
margin_top = 0.0
margin_bottom = 206.0

[node name="DummyButton" type="Button" parent="LobbyMenu/VBoxContainer/TeamPanelContainer/T0"]
margin_top = 216.0
margin_right = 261.0
margin_bottom = 262.0
size_flags_stretch_ratio = 2.43
flat = true
__meta__ = {
"_edit_lock_": true
}

[node name="T2" type="VBoxContainer" parent="LobbyMenu/VBoxContainer/TeamPanelContainer"]
margin_left = 642.0
margin_right = 904.0
margin_bottom = 262.0
size_flags_horizontal = 3
__meta__ = {
"_edit_lock_": true
}

[node name="PlayerContainer" parent="LobbyMenu/VBoxContainer/TeamPanelContainer/T2" instance=ExtResource( 1 )]
margin_top = 0.0
margin_right = 262.0
margin_bottom = 206.0

[node name="JoinButton" type="Button" parent="LobbyMenu/VBoxContainer/TeamPanelContainer/T2"]
margin_top = 216.0
margin_right = 262.0
margin_bottom = 262.0
size_flags_stretch_ratio = 2.43
text = "Join Team 2"
__meta__ = {
"_edit_lock_": true
}

[node name="ControlsContainer" type="VBoxContainer" parent="LobbyMenu/VBoxContainer"]
margin_left = 302.0
margin_top = 322.0
margin_right = 602.0
margin_bottom = 480.0
rect_min_size = Vector2( 300, 0 )
size_flags_horizontal = 4
size_flags_vertical = 0
custom_constants/separation = 20

[node name="WaitingLabel" type="Label" parent="LobbyMenu/VBoxContainer/ControlsContainer"]
margin_right = 300.0
margin_bottom = 26.0
size_flags_vertical = 1
text = "Waiting for host to start..."
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RandomizeButton" type="Button" parent="LobbyMenu/VBoxContainer/ControlsContainer"]
margin_top = 46.0
margin_right = 300.0
margin_bottom = 92.0
text = "Randomize Players"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StartButton" type="Button" parent="LobbyMenu/VBoxContainer/ControlsContainer"]
margin_top = 112.0
margin_right = 300.0
margin_bottom = 158.0
text = "Start Game"
